src/css/mono.less
@import "./fonts/inter/inter.css";
@import "./logue.less";

html, body {
    height: 100%;
    position: relative;
    scroll-behavior: smooth;
}

body {
    font-family: Inter, -apple-system, Roboto, BlinkMacSystemFont, 'Segoe UI', Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', '微软雅黑', 'Microsoft Yahei UI', sans-serif !important;
    .container {
        background-color: white;
        margin-left: auto;
        margin-right: auto;
        max-width: 1024px;
        position: relative;
        height: 100%;

        @media screen and (max-width: 1024px) {
            margin-left: 16px;
            margin-right: 16px;
        }

        .mono-main {
            position: relative;
            height: 100%;
            margin-top: 56px;
        }
    }
}

